[package]
name = "font-catcher"
version = "0.1.0"
edition = "2018"
authors = ["Gustavo Peredo"]
description = "A command line font package manager. To see more commands, run `font-catcher --help`"

[dependencies]
dirs = "4.0.0"
toml = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
google_repo = []