[package]
name = "font-catcher"
version = "1.2.0"
edition = "2018"
authors = ["Gustavo Peredo"]
description = "A command line font package manager. To see more commands, run `font-catcher --help`"
homepage = "https://github.com/GustavoPeredo/Font-Catcher"
documentation = "https://github.com/GustavoPeredo/Font-Catcher"
repository = "https://github.com/GustavoPeredo/Font-Catcher"
readme = "README.md"
keywords = ["fonts", "font-management", "download"]
categories = ["command-line-utilities"]
license = "AGPL-3.0"

[dependencies]
dirs = "4.0.0"
toml = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
font-kit = "0.10.0"
chrono = "0.4.16"
curl = "0.4.40"

[features]
google_repo = []
