[package]
name = "font-catcher"
version = "2.1.1"
edition = "2018"
authors = ["Gustavo Peredo"]
description = "A command-line utility and a high-level library for user and system font management"
homepage = "https://github.com/GustavoPeredo/Font-Catcher"
documentation = "https://github.com/GustavoPeredo/Font-Catcher"
repository = "https://github.com/GustavoPeredo/Font-Catcher"
readme = "README.md"
keywords = ["fonts", "font-management", "download", "awesome"]
categories = ["command-line-utilities", "filesystem", "visualization"]
license = "AGPL-3.0"

[dependencies]
dirs = "4.0.0"
toml = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
font-kit = "0.10.1"
chrono = "0.4.16"
curl = "0.4.40"

[features]
google_repo = []
